--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,11 @@
   border-radius: 5px;
 }
 
+.table{
+  width: 90%;
+  margin: 30px auto;
+}
+
 table {
   border-collapse: collapse;
   width: 100%;
